--- a/Back_end/.env
+++ b/Back_end/.env
@@ -1,3 +1,3 @@
-STRING=mongodb://localhost:27017/
+# STRING=mongodb://localhost:27017/
 SECRET_KEY=sneha
-STRINGatlas=mongodb+srv://sneha:0QRO8JQOpL8Iz9RP@cluster0.mlnhvja.mongodb.net/?appName=Cluster0
+STRING=mongodb+srv://sneha:0QRO8JQOpL8Iz9RP@cluster0.mlnhvja.mongodb.net/?appName=Cluster0
